// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`request allows Accept header overrides 1`] = `
Array [
  "http://example.org",
  Object {
    "headers": Object {
      "Accept": "text/html",
    },
  },
]
`;

exports[`request passes all parameters to fetch 1`] = `
Array [
  "http://example.org",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Authorization": "bearer yo!",
    },
    "method": "POST",
  },
]
`;
